コメント用ハンドラー関数にSwagger用のコメント追加
